--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "@reach/combobox": "^0.16.1",
     "@react-google-maps/api": "^2.2.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "date-fns": "^2.23.0",
     "firebase": "^8.10.0",
     "google-map-react": "^2.1.10",
+    "pretty-checkbox": "^3.0.3",
+    "pretty-checkbox-react": "^3.2.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
+    "react-bootstrap": "^2.0.0-beta.5",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-dropdown-now": "^6.0.1",
@@ -21,12 +24,13 @@
     "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-timefield": "^3.2.3",
     "redux": "^4.1.1",
     "redux-firestore": "^0.15.0",
     "redux-root-reducer": "0.0.6",
     "redux-thunk": "^2.3.0",
     "use-places-autocomplete": "^1.9.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
