--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@firebase/storage": "^0.8.2",
+    "@material-ui/core": "^4.12.3",
     "@reach/combobox": "^0.16.1",
     "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -21,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-dropdown-now": "^6.0.1",
+    "react-phone-number-input": "^3.1.34",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^5.2.0",
