--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "redux-firestore": "^0.15.0",
     "redux-root-reducer": "0.0.6",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
+    "sweetalert": "^2.1.2",
     "use-places-autocomplete": "^1.9.4",
     "web-vitals": "^1.1.2"
   },
